# trading_ibkr

./: .env.example  .gitignore  CLAUDE.md  CLI_REFACTOR_PLAN.md  PHASE2_PLAN.md  PROGRESS.md  QUICKSTART.md  README.md  linter.sh  pyproject.toml  test_connection.py
.githooks/: pre-commit
docs/: PHASE_1_PROGRESS.md  README.md  bracket_orders_guide.md  model_training_guide.md  monitoring_guide.md  next_gen_strategy.md  order_book_implementation.md  strategy_coordinator_architecture.md  strategy_quick_start.md  trailing_stops_guide.md  unified_strategy_guide.md
examples/: README.md
ibkr_trader/: __init__.py  base_strategy.py  broker.py  cli.py  config.py  constants.py  dashboard.py  events.py  market_data.py  models.py  oco_orders.py  order_book_service.py  order_intents.py  portfolio.py  presets.py  risk.py  safety.py  strategy.py  strategy_adapters.py  summary.py  telemetry.py  trailing_stops.py
model/: __init__.py
tests/: conftest.py  test_adaptive_momentum.py  test_alerting.py  test_backtest.py  test_base_strategy.py  test_bracket_orders.py  test_broker.py  test_cli.py  test_config.py  test_correlation_risk.py  test_dashboard.py  test_events.py  test_factors.py  test_fees.py  test_ibkr_market_data.py  test_industry_model.py  test_liquidity_screener.py  test_market_data.py  test_market_data_storage.py  test_monitoring_cli.py  test_oco_orders.py  test_option_data.py  test_portfolio.py  test_risk_guard_fees.py  test_sfety.py  test_sim.py  test_sim_event_loader.py  test_strategy.py  test_strategy_config.py  test_strategy_portability.py  test_symbol_limits.py  (+2 more)
(+100 files in other folders)
