[project]
name = "ibkr-personal-trader"
version = "0.1.0"
description = "Personal modular trading platform for IBKR TWS"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "ib-insync>=0.9.86",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pandas-stubs>=2.0.0",
]
training = [
    "yfinance>=0.2.30",
    "matplotlib>=3.8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pandas-stubs>=2.0.0",
]
training = [
    "yfinance>=0.2.30",
    "matplotlib>=3.8.0",
]

[project.scripts]
ibkr-trader = "ibkr_trader.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ibkr_trader"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "A", "C4", "DTZ", "T20", "RET", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.uv]
default-groups = ["dev", "training"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: Live data integration tests that call external services",
]
